@@ -16,7 +16,6 @@ source "$APPSDIR/system/ramtest/Kconfig"
 source "$APPSDIR/system/readline/Kconfig"
 source "$APPSDIR/system/prun/Kconfig"
 source "$APPSDIR/system/mdio/Kconfig"
-source "$APPSDIR/system/poweroff/Kconfig"
 source "$APPSDIR/system/ramtron/Kconfig"
 source "$APPSDIR/system/sdcard/Kconfig"
 source "$APPSDIR/system/sudoku/Kconfig"
