@@ -90,10 +90,6 @@ ifeq ($(CONFIG_SYSTEM_READLINE),y)
 CONFIGURED_APPS += system/readline
 endif
 
-ifeq ($(CONFIG_SYSTEM_POWEROFF),y)
-CONFIGURED_APPS += system/poweroff
-endif
-
 ifeq ($(CONFIG_SYSTEM_RAMTRON),y)
 CONFIGURED_APPS += system/ramtron
 endif
