@@ -1,11 +1,0 @@
-/Make.dep
-/.depend
-/.built
-/*.asm
-/*.rel
-/*.lst
-/*.sym
-/*.adb
-/*.lib
-/*.src
-/*.obj
