@@ -1,18 +1,0 @@
-#
-# For a description of the syntax of this configuration file,
-# see the file kconfig-language.txt in the NuttX tools repository.
-#
-
-config SYSTEM_POWEROFF
-	bool "Power-Off"
-	default n
-	depends on LIB_BOARDCTL && ARCH_HAVE_POWEROFF
-	select BOARDCTL_POWEROFF
-	---help---
-		Enable support for the NSH poweroff command.  NOTE: This option
-		provides the NSH power-off command only.  It requires board-specific
-		support to actually implement the power-off.
-
-if SYSTEM_POWEROFF
-endif
-
